--- a/layouts/partials/homepage/pain-points.html
+++ b/layouts/partials/homepage/pain-points.html
@@ -2,7 +2,7 @@
   <div class="mw8 center ph3">
     <div class="tc">
       <h2 class="f2 athelas mb2">Si tu negocio crece, ¿por qué tú te sientes más atrapado?</h2>
-      <p class="f5 lh-copy measure-wide center gray">El éxito no debería sentirse como un castigo. Si te identificas con esto, tus sistemas actuales han llegado a su límite.</p>
+      <p class="f5 lh-copy measure-wide center gray">Si te identificas con los siguientes sintomas, mira como nuestra consultoria identifica y resuelve los puntos de mejora:</p>
     </div>
     <div class="custom-features-grid mt4">
       {{ range .items }}
